# feavr-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ClangBuildAnalyzer  ClangBuildAnalyzer.ini  ClangBuildAnalyzerSession.txt  LICENSE  Makefile  README.md  assets_watcher.sh  build-all.bat  build-refresh.bat  build-shaders.bat  cmake_install.cmake  main  test.ecs  tests
.cmake/api/v1/reply/: cache-v2-1d8996afaf5cf05b8045.json  cache-v2-5680cd0db50256dd5c66.json  cache-v2-b15334981184036509ad.json  cache-v2-d1c3a9e3bbd0545f07a7.json  cache-v2-e5f0eff74cec603726b6.json  cmakeFiles-v1-3099570e728729fd3d8c.json  cmakeFiles-v1-a6363351f635a761a98f.json  cmakeFiles-v1-a96e136c09010165312f.json  cmakeFiles-v1-e7f10875407701b31f76.json  cmakeFiles-v1-eeeca7b52e7f03b94544.json  codemodel-v2-18d22bad83771a207372.json  (+54 more)
assets/: falcon2.glb
assets-meta/: assets_index.csv  assets_watcher.py  gen_assets_index.csv
assets-meta/python/: assets_watcher.py  pyvenv.cfg
assets/shaders/: default_shader.hlsl  global.hlsli  identify_shader.hlsl  mesh_outline.hlsl  unlit_shader.hlsl
graph-debug/: cinclude2dot.pl  example.dot  graph_dependencies.sh  graph_dependencies_cpp.sh  highlight_edges.py
graph-debug/python/: pyvenv.cfg
include/: CMakeLists.txt  Makefile  cmake_install.cmake
include/fastgltf/: Makefile  cmake_install.cmake
include/fmt/: Makefile  cmake_install.cmake  fmt-targets.cmake
shaders/: CMakeLists.txt  Makefile  cmake_install.cmake  default_shader.hlsl  hlsl_syntax.hlsli
shaders/spv/: default_shader_ps.spv  default_shader_vs.spv  unlit_shader_ps.spv  unlit_shader_vs.spv
src/assets-system/: CMakeLists.txt  Makefile  cmake_install.cmake
src/assets-system/assets-system/: AssetFile.cpp  AssetFile.h  AssetID.h  AssetLookup.h  AssetManager.cpp  AssetManager.h  GenerateShaderLookup.cpp  GenerateShaderLookup.h  ShaderAssetGenerator.cpp  ShaderAssetGenerator.h  ShaderAssetManager.cpp  ShaderAssetManager.h  TextAssetGenerator.cpp  TextAssetGenerator.h  TextAssetManager.cpp  TextAssetManager.h
src/assets-system/assets-system/generators/: AssetAssetGenerator.cpp  GenerateShaderLookup.cpp  GenerateShaderLookup.h  IAssetGenerator.cpp  IAssetGenerator.h  ShaderAssetGenerator.cpp  StandardAssetGenerators.h  TextAssetGenerator.cpp
src/assets-system/assets-system/lookup/: Asset16.h  Asset17.h  Asset18.h  Asset29.h  Asset30.h  Asset31.h  Asset32.h
src/assets-system/serialisation/: ReadByteStream.cpp  ReadByteStream.h  SerialArrayHelpers.h  SerialConcepts.h  SerialManager.h  Stream.cpp  Stream.h  WriteByteStream.h  array.h  simple_json.cpp  simple_json.h
src/directmath/: CMakeLists.txt  Makefile  cmake_install.cmake  mathx.h
src/ecs/: CMakeLists.txt  How_to_use_ECS.txt  Makefile  cmake_install.cmake
src/ecs/ecs/: Archetype.cpp  Archetype.h  ArchetypeData.h  ByteStream.h  Common.h  ComponentConcepts.h  ComponentTypeDefinitions.h  ComponentTypeInfo.cpp  ComponentTypeInfo.h  ComponentTypeUniverse.h  Engine.cpp  Engine.h  EngineAliases.h  EngineExtensions.cpp  EngineExtensions.h  EngineView.h  EntityManager.cpp  EntityManager.h  EntityRef.h  EntitySource.cpp  EntitySource.h  RawArray.cpp  RawArray.h  RawArrays.h  Serial.cpp  Serial.h  SerialEntity.h  SerialTypes.h  SingletonEntity.h  SingletonView.h  TypeRegistry.h  TypeUniverse.h  TypenameRegistry.h  UpdateQueue.h  array.h
src/engine/: CMakeLists.txt  Core.cpp  Core.h  ImguiOverlay.cpp  ImguiOverlay.h  Makefile  camera.cpp  camera.h  cmake_install.cmake  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/engine/components/: Model.cpp  Model.h  Tags.cpp  Tags.h  Transform.cpp  Transform.h
src/engine/ecs/: Common.h  CommonEngine.h  ComponentTypeUniverse.h  Engine.h  EngineInstantiation.cpp  RawArray.h  RawArrays.h  TypeIndexer.h  UpdateQueue.h
src/engine/generators/: SceneAssetGenerator.cpp  SceneAssetGenerator.h
src/engine/rendering/: Buffer.h  Camera.cpp  Camera.h  CommonSetLayouts.cpp  CommonSetLayouts.h  CommonTextures.cpp  CommonTextures.h  Core.cpp  Core.h  FwdPassPipeline.h  Image.cpp  Image.h  ImguiOverlay.cpp  ImguiOverlay.h  Material.cpp  Material.h  PassManager.cpp  PassManager.h  RenderingEngine.cpp  RenderingEngine.h  Scene.cpp  Scene.h  SelectMesh.cpp  SelectMesh.h  SubMesh.cpp  SubMesh.h  Swapchain.cpp  Swapchain.h  VulkanEngine.cpp  VulkanEngine.h  main.cpp  shader_descriptors.h
src/engine/rendering/engine-assets/: ShaderAssetData.cpp  ShaderAssetData.h
src/engine/rendering/pass-system/: DefaultPass.cpp  DefaultPass.h  IdentifyPass.cpp  IdentifyPass.h  Material.h  Mesh.cpp  Mesh.h  MeshTransformSorter.cpp  MeshTransformSorter.h  PassComponent.h  PassDirectory.h  PassMeshManager.cpp  PassMeshManager.h  PassSystem.cpp  PassSystem.h  ScreenRaycastPass.cpp  ScreenRaycastPass.h  StencilOutlinePass.cpp  StencilOutlinePass.h  SubMesh.cpp  SubMesh.h  shader_descriptors.h
src/engine/rendering/passes/: DefaultPass.cpp  DefaultPass.h  Pass.cpp  Pass.h  PassDirectory.h  PassInstance.h
src/engine/rendering/resources/: Buffer.h  EngineResources.cpp  EngineResources.h  Image.cpp  Image.h  RenderingResources.cpp  RenderingResources.h  ResourceHandles.cpp  ResourceHandles.h
src/engine/rendering/utility/: ClickOnMeshTool.cpp  ClickOnMeshTool.h  DescriptorSetLayoutInfo.h  Descriptors.cpp  Descriptors.h  Initializers.cpp  Initializers.h  OLD_loader.cpp  OLD_loader.h  Pipelines.cpp  Pipelines.h  Screenshot.cpp  Screenshot.h  VulkanCheck.cpp  VulkanCheck.h  VulkanNew.h
src/engine/systems/: ModelSystem.cpp  ModelSystem.h
src/engine/widgets/: AutoCompleteWidget.cpp  AutoCompleteWidget.h  EngineWidget.cpp  EngineWidget.h
src/serialisation/: CMakeLists.txt  Makefile  cmake_install.cmake
src/serialisation/serialisation/: ReadByteStream.h  SerialConcepts.h  SerialManager.h  WriteByteStream.cpp  array.h
src/shader_drafter/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/tests/: CMakeLists.txt
src/tests/tests/: ecs_tests.h  main.cpp
